tests/machine/x/cobol/in_operator.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. IN-OPERATOR.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 XS.
           05 E1 PIC 9 VALUE 1.
           05 E2 PIC 9 VALUE 2.
           05 E3 PIC 9 VALUE 3.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       IF (2 >= 1 AND 2 <= 3)
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       IF ! ((5 >= 1 AND 5 <= 3))
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       STOP RUN.
